// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`array should fail to parse arrays with invalid values 1`] = `
[
  {
    "code": "invalid_type",
    "expected": "number",
    "path": [
      1,
    ],
    "received": "string",
  },
]
`;

exports[`array should fail to parse non-arrays 1`] = `
[
  {
    "code": "invalid_type",
    "expected": "array",
    "path": [],
    "received": "number",
  },
]
`;

exports[`array the path property works within an object 1`] = `
[
  {
    "code": "invalid_type",
    "expected": "number",
    "path": [
      "a",
      0,
    ],
    "received": "string",
  },
]
`;
